(WIP) Install mysql, php70, apache and trafficserver

--- a/common/group_vars/local_dev.yml
+++ b/common/group_vars/local_dev.yml
@@ -3,3 +3,5 @@ timezone: Asia/Tokyo
 ntp_servers:
   - ntp.jst.mfeed.ad.jp
   - ntp.nict.jp
+
+mysql_root_password: "{{ lookup('env', 'MYSQL_ROOT_PASSWORD') }}"
