--- a/.envrc.example
+++ b/.envrc.example
@@ -1,1 +1,3 @@
 export MYSQL_ROOT_PASSWORD="_your_password_here_"
+export WORDPRESS_DB_PASSWORD="_your_password_here_"
+export WORDPRESS_ADMIN_PASSWORD="_your_password_here_"
