--- a/common/group_vars/local_dev.yml
+++ b/common/group_vars/local_dev.yml
@@ -6,7 +6,12 @@ ntp_servers:
 
 mysql_root_password: "{{ lookup('env', 'MYSQL_ROOT_PASSWORD') }}"
 
-apache_port: 80
+apache_port: 8081
+
+trafficserver_port: 80
+trafficserver_retain_host_header: 1
+trafficserver_remap_configs:
+  - map http://192.168.33.131/ http://localhost:{{ apache_port }}/
 
 wordpress_db_name: wordpress
 wordpress_db_user: wordpress
