Restart apache after installing php70

--- a/common/roles/php70/tasks/main.yml
+++ b/common/roles/php70/tasks/main.yml
@@ -8,6 +8,7 @@
     - php70-php-mbstring
     - php70-php-mysqlnd
     - php70-php-xml
+  notify: restart apache
   tags: ["php70"]
 
 - name: Write /etc/opt/remi/php70/php.ini
