--- a/local_dev/roles/wordpress_test_data/tasks/main.yml
+++ b/local_dev/roles/wordpress_test_data/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 - name: Check wordpress test data is already installed
-  stat: path=/root/wordpress-theme-test-date-ja.xml
+  stat: path=/root/wordpress-test-data-with-lots-of-photos-ja.xml
   register: wordpres_test_data_xml_st
   tags: ["wordpress_test_data"]
 
-- name: Download xml for wordpress test data
-  get_url: url=https://raw.github.com/jawordpressorg/theme-test-data-ja/master/wordpress-theme-test-date-ja.xml dest=/root/wordpress-theme-test-date-ja.xml
+- name: Copy xml for wordpress test data
+  copy: src=wordpress-test-data-with-lots-of-photos-ja.xml dest=/root/wordpress-test-data-with-lots-of-photos-ja.xml
   when: not wordpres_test_data_xml_st.stat.exists
   tags: ["wordpress_test_data"]
 
@@ -15,6 +15,6 @@
   tags: ["wordpress_test_data"]
 
 - name: Install wordpress test data
-  command: php70 /usr/local/bin/wp import --path={{ wordpress_install_dir }} --authors=create /root/wordpress-theme-test-date-ja.xml
+  command: php70 /usr/local/bin/wp import --path={{ wordpress_install_dir }} --authors=create /root/wordpress-test-data-with-lots-of-photos-ja.xml
   when: not wordpres_test_data_xml_st.stat.exists
   tags: ["wordpress_test_data"]
