--- a/common/roles/remi/tasks/main.yml
+++ b/common/roles/remi/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
-- include: centos6.yml
-  when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
+- include: centos.yml
+  when: ansible_distribution == "CentOS"
