--- a/common/roles/timezone/tasks/main.yml
+++ b/common/roles/timezone/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
 - include: centos6.yml
   when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "6"
+
+- include: centos7.yml
+  when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7"
