--- a/local_dev/playbook.yml
+++ b/local_dev/playbook.yml
@@ -7,6 +7,7 @@
   remote_user: root
   roles:
     - ../common/roles/selinux
+    - ../common/roles/yum_config
     - ../common/roles/yum_upgrade
     - ../common/roles/epel
     - ../common/roles/timezone
