Enable healthcheck plugin

--- a/local_dev/roles/trafficserver/tasks/main.yml
+++ b/local_dev/roles/trafficserver/tasks/main.yml
@@ -8,7 +8,7 @@
   tags: ["trafficserver"]
 
 - name: Write trafficserver config files
-  template: src={{ item }} dest=/etc/trafficserver/{{ item | regex_replace('\.j2$', '') }}
+  template: src={{ item }} dest=/etc/trafficserver/{{ item | regex_replace('\.j2$', '') }} owner=ats group=ats
   notify: restart trafficserver
   with_items:
     - cache.config.j2
@@ -17,17 +17,9 @@
     - remap.config.j2
     - logs_xml.config.j2
     - storage.config.j2
+    - ts-alive.j2
+    - healthcheck.config.j2
   tags: ["trafficserver"]
-
-#- name: Write /etc/trafficserver/records.config
-#  template: src=records.config.j2 dest=/etc/trafficserver/records.config
-#  notify: restart trafficserver
-#  tags: ["trafficserver"]
-#
-#- name: Write /etc/trafficserver/remap.config
-#  template: src=remap.config.j2 dest=/etc/trafficserver/remap.config
-#  notify: restart trafficserver
-#  tags: ["trafficserver"]
 
 - name: Start and enable trafficserver service
   service: name=trafficserver state=started enabled=True
